--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
     
     <main id="app">
         <h2 class="title">{{message}}</h2>
-        <ul>
+        <ul class="infos">
             <li v-for="user, index in users" :key="user.id"> 
                 <div class="user-info">
-                    <h4>{{user.name}} ({{user.id}}) a {{user.age}} ans</h4>
-                    <input class="btn" type="button" value="Edit"/>
-                    <input class="btn" type="button" value="DELETE" @click="Delete(user.id)"/>
+                    <h3>{{user.name}} ({{user.id}}) a {{user.age}} ans</h3>
+                    <div class="buttons">
+                        <input class="btn" type="button" value="Edit" @click="Edit(user.id)"/>
+                        <input class="btn" type="button" value="DELETE" @click.prevent="Delete(user.id)"/>
+                    </div>
                 </div>
             </li>
         </ul>
+        <p class="error">{{error}}</p>
         <form @submit.prevent="Add">
             <input type="text" placeholder="Your name" v-model.trim="name">
             <input type="number" placeholder="Your age" v-model="age">
 
 
-            <button type="submit"> Nouveau </button>
+            <button class="btn" type="submit"> Add new user </button>
         </form>
     </main>
 </body>
